Fixed dropdown showing behind shipment tracker

--- a/src/Components/Molecules/Dropdown/Dropdown.css
+++ b/src/Components/Molecules/Dropdown/Dropdown.css
@@ -33,6 +33,7 @@
   list-style: none;
   padding: 20px;
   margin: 0;
+  z-index: 2;
 }
 
 .dropdown-menu li {
