--- a/src/Components/Organisms/ShipmentTracker/ShipmentTracker.css
+++ b/src/Components/Organisms/ShipmentTracker/ShipmentTracker.css
@@ -11,7 +11,7 @@
   border: 1px solid gainsboro;
   border-radius: 10px;
 }
-.tracker-second-container {
+.steps-container {
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
